[package]
name = "defendertest"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["cargo", "derive"] }
human-time = "0.1.6"
pbr = "1.1.1"
rand = "0.8.5"
time = "0.3.22"
uuid = { version = "1.3.4", features = ["v4"] }

[profile.release]
debug = true
